recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:2: error: not enough arguments for method avance: (x$1: Double)Unit.
Unspecified value parameter x$1.
  avance()
        ^FourSquare:3: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite()
        ^FourSquare:4: error: not enough arguments for method avance: (x$1: Double)Unit.
Unspecified value parameter x$1.
  avance()
        ^FourSquare:5: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite()
        ^FourSquare:6: error: not enough arguments for method avance: (x$1: Double)Unit.
Unspecified value parameter x$1.
  avance()
        ^FourSquare:7: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite()
        ^FourSquare:8: error: not enough arguments for method avance: (x$1: Double)Unit.
Unspecified value parameter x$1.
  avance()
        ^