recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  avance()
  droite()
  avance()
  droite()
  avance()
  droite()
  avance()
}